--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon backend/Server.js"
+    "start": "node backend/Server.js"
+    
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
